--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-            <li><a href="index.html" class="nav-link">Home</a></li>
-            <li><a href="projects.html" class="nav-link">Projects</a></li>
-            <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="projects.html" class="nav-link">Projects</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Zak Cronin</h1>
-        <iframe src="https://www.youtube.com/embed/1JXn4qW73sc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
-        <button onclick="window.location.href='#about'">About Me</button>
+        <div class="content-container">
+            <h1>Zak Cronin</h1>
+            <div class="video-container">
+                <iframe src="https://www.youtube.com/embed/1JXn4qW73sc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="button-container">
+                <button onclick="window.location.href='#about'">About Me</button>
+            </div>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 Zak Cronin. All rights reserved.</p>
