--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <iframe src="https://www.youtube.com/embed/1JXn4qW73sc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="button-container">
-                <button onclick="window.location.href='#about'">About Me</button>
+                <button onclick="window.location.href='about.html'">About Me</button>
             </div>
         </div>
     </main>
