--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/projects.css">
 </head>
 <body>
     <header>
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="home.html" class="nav-link">Home</a></li>
                 <li><a href="projects.html" class="nav-link">Projects</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
