--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="home.html" class="nav-link">Home</a></li>
+                <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="projects.html" class="nav-link">Projects</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
             </ul>
