Moved bottom of about page up a bit, resized CV & Contact Form

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
          <h2>Contact Me</h2>
             <div class="side-by-side-container">
                 <div class="google-form">
-                    <iframe src="https://forms.gle/xaDBF95HHkfLPyou5" frameborder="0" marginheight="0" marginwidth="0" class="form-iframe">Loading...</iframe>
+                    <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A" frameborder="0" marginheight="0" marginwidth="0" class="form-iframe">Loading...</iframe>
                 </div>
                 <div class="google-drive-pdf">
                     <iframe src="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" class="pdf-iframe"></iframe>
