--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to Zak Cronin's portfolio. Explore my projects, learn more about me, and get in touch.">
     <title>NyanZak - Home</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
