--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <meta name="description" content="Learn more about Zak Cronin, his skills, and expertise in game development.">
     <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
