--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <meta name="description" content="Explore Zak Cronin's game development projects.">
     <link rel="stylesheet" href="css/projects.css">
 </head>
 <body>
