--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <meta name="description" content="Explore Zak Cronin's game development projects.">
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="../css/projects.css">
 </head>
 <body>
     <header>
