--- a/about/index.html
+++ b/about/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <img src="images/Signature.png" alt="Logo">
+        <img src="../images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index">Home</a></li>
+                <li><a href="projects">Projects</a></li>
+                <li><a href="about">About</a></li>
             </ul>
         </nav>
     </header>
