--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="projects.html" class="nav-link">Projects</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="index" class="nav-link">Home</a></li>
+                <li><a href="projects" class="nav-link">Projects</a></li>
+                <li><a href="about" class="nav-link">About</a></li>
             </ul>
         </nav>
     </header>
