--- a/projects/index.html
+++ b/projects/index.html
@@ -12,16 +12,14 @@
         <img src="../images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><a href="about">About</a></li>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
-        </nav>
+        </nav>        
     </header>
-    
     <main class="projects-main">
-        <h1>Projects</h1> <!-- Move the heading outside of projects-section -->
-        
+        <h1>Projects</h1>
         <section class="projects-section">
             <div class="project-gallery">
                 <div class="project-item">
