--- a/about/index.html
+++ b/about/index.html
@@ -12,11 +12,11 @@
         <img src="../images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><a href="about">About</a></li>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
-        </nav>
+        </nav>        
     </header>
     <main class="about-main">
         <section class="about-section">
