--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="index" class="nav-link">Home</a></li>
-                <li><a href="projects" class="nav-link">Projects</a></li>
-                <li><a href="about" class="nav-link">About</a></li>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
-        </nav>
+        </nav>        
     </header>
     <main>
         <div class="content-container">
