--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,7 @@
             <h1>About</h1>
             <div class="about-content">
                 <div class="profile-image-container">
-                    <img src="images/NyanCatCircle.png" alt="Profile Image" class="profile-image">
+                    <img src="../NyanCatCircle.png" alt="Profile Image" class="profile-image">
                 </div>
                 <div class="about-text">
                     <h2>Hello!</h2>
