--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/Signature.png" alt="Logo">
         <nav>
             <ul>
-                <li><a href="/index">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/projects">Projects</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
