--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Zak Cronin's portfolio. Explore my projects, learn more about me, and get in touch.">
+    <meta name="description" content="Welcome to NyanZak's portfolio. Explore my projects, learn more about me, and get in touch.">
     <title>NyanZak - Home</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -25,7 +25,7 @@
                 <iframe src="https://www.youtube.com/embed/1JXn4qW73sc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="button-container">
-                <button onclick="window.location.href='/about'">THIS IS A TEST TO SEE IF THE WEBSITE HAS UPDATES</button>
+                <button onclick="window.location.href='/about'">About Me</button>
             </div>
         </div>
     </main>
