Updated stylesheef ref to new version, added bluesky

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <meta name="description" content="Learn more about Zak Cronin, his skills, and expertise in game development.">
+    <meta name="description" content="Learn more about NyanZak, his skills, and expertise in game development.">
     <link rel="stylesheet" href="../css/about.css">
 </head>
 <body>
@@ -47,8 +47,9 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.min.css">
                 <a href="https://x.com/NyanZak_" class="fa fa-twitter"></a>
+                <a href="https://bsky.app/profile/nyanzak.com" class = "fa fa-bluesky"></a>
                 <a href="https://www.twitch.tv/nyanzak" class="fa fa-twitch"></a>
                 <a href="https://www.youtube.com/nyanzak" class="fa fa-youtube"></a>
                 <a href="https://www.linkedin.com/in/zakcronin/" class="fa fa-linkedin"></a>
