--- a/about/index.html
+++ b/about/index.html
@@ -56,6 +56,12 @@
                 <a href="https://www.instagram.com/nyanzak/" class="fa fa-instagram"></a>
             </div>
         </section>
+
+        <section class="linktree-section">
+            <h2>Check out my Linktree</h2>
+            <iframe src="https://linktr.ee/your-username" width="100%" height="600" frameborder="0" style="border: none;"></iframe>
+        </section>
+        
     </main>
     <footer>
         <p>&copy; 2024 Zak Cronin. All rights reserved.</p>
