--- a/about/index.html
+++ b/about/index.html
@@ -47,7 +47,7 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.min.css">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.css">
                 <a href="https://x.com/NyanZak_" class="fa fa-twitter"></a>
                 <a href="https://bsky.app/profile/nyanzak.com" class = "fa fa-bluesky"></a>
                 <a href="https://www.twitch.tv/nyanzak" class="fa fa-twitch"></a>
@@ -56,12 +56,6 @@
                 <a href="https://www.instagram.com/nyanzak/" class="fa fa-instagram"></a>
             </div>
         </section>
-
-        <section class="linktree-section">
-            <h2>Check out my Linktree</h2>
-            <iframe src="https://linktr.ee/your-username" width="100%" height="600" frameborder="0" style="border: none;"></iframe>
-        </section>
-        
     </main>
     <footer>
         <p>&copy; 2024 Zak Cronin. All rights reserved.</p>
