--- a/about/index.html
+++ b/about/index.html
@@ -48,12 +48,12 @@
             <h2>Follow Me</h2>
             <div class="social-icons">
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.min.css">
-                <a href="https://x.com/NyanZak_" class="fa fa-x-twitter"></a>
-                <a href="https://bsky.app/profile/nyanzak.com" class = "fa fa-bluesky"></a>
-                <a href="https://www.twitch.tv/nyanzak" class="fa fa-twitch"></a>
-                <a href="https://www.youtube.com/nyanzak" class="fa fa-youtube"></a>
-                <a href="https://www.linkedin.com/in/zakcronin/" class="fa fa-linkedin"></a>
-                <a href="https://www.instagram.com/nyanzak/" class="fa fa-instagram"></a>
+                <a href="https://x.com/NyanZak_" class="fa-brands fa-twitter"></a>
+                <a href="https://bsky.app/profile/nyanzak.com" class="fa-brands fa-bluesky"></a>
+                <a href="https://www.twitch.tv/nyanzak" class="fa-brands fa-twitch"></a>
+                <a href="https://www.youtube.com/nyanzak" class="fa-brands fa-youtube"></a>
+                <a href="https://www.linkedin.com/in/zakcronin/" class="fa-brands fa-linkedin"></a>
+                <a href="https://www.instagram.com/nyanzak/" class="fa-brands fa-instagram"></a>
             </div>
         </section>
     </main>
