--- a/about/index.html
+++ b/about/index.html
@@ -47,15 +47,16 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.min.css">
-                <a href="https://x.com/NyanZak_" class="fa-brands fa-twitter"></a>
-                <a href="https://bsky.app/profile/nyanzak.com" class="fa-brands fa-bluesky"></a>
-                <a href="https://www.twitch.tv/nyanzak" class="fa-brands fa-twitch"></a>
-                <a href="https://www.youtube.com/nyanzak" class="fa-brands fa-youtube"></a>
-                <a href="https://www.linkedin.com/in/zakcronin/" class="fa-brands fa-linkedin"></a>
-                <a href="https://www.instagram.com/nyanzak/" class="fa-brands fa-instagram"></a>
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
+                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-bluesky"></i></a>
+                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.linkedin.com/in/zakcronin/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </section>
+        
     </main>
     <footer>
         <p>&copy; 2024 Zak Cronin. All rights reserved.</p>
