--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,16 @@
                 <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </section>
-        
+        <style>
+            .social-icons i {
+                font-size: 2rem; /* Change size to suit your design */
+                margin: 0 10px;
+                color: black;
+            }
+            .social-icons i:hover {
+                color: #007bff; /* Optional hover effect */
+            }
+        </style>
     </main>
     <footer>
         <p>&copy; 2024 Zak Cronin. All rights reserved.</p>
