--- a/about/index.html
+++ b/about/index.html
@@ -48,21 +48,18 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-square-twitter"></i></a>
-                <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-square-bluesky"></i></a>
-                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-square-twitch"></i></a>
-                <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-square-youtube"></i></a>
-                <a href="https://www.linkedin.com/in/zakcronin/"><i class="fa-brands fa-square-linkedin"></i></a>
-                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-bluesky"></i></a>
+                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.linkedin.com/in/zakcronin/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </section>
         <style>
             .social-icons i {
                 font-size: 2rem; /* Change size to suit your design */
                 margin: 0 10px;
-            }
-            .social-icons i:hover {
-                color: #007bff; /* Optional hover effect */
             }
         </style>
     </main>
