--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-bluesky"></i></a>
                 <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
                 <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
