--- a/about/index.html
+++ b/about/index.html
@@ -65,6 +65,10 @@
                 font-size: 4rem;
                 margin: 0 10px;
             }
+
+            .social-icons a[href*="x.com"] i {
+             color: #ffffff; /* White for Twitter */
+            }
         </style>
     </main>
     <footer>
