--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <title>About</title>
     <meta name="description" content="Learn more about NyanZak, his skills, and expertise in game development.">
     <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/brands.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css">
 </head>
 <body>
     <header>
