--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
                 <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
                 <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
                 <a href="https://www.linkedin.com/in/zakcronin/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
         </section>
         <style>
