added spotify and github to socials, removed linkedin, changed order

--- a/about/index.html
+++ b/about/index.html
@@ -50,10 +50,12 @@
             <div class="social-icons">
                 <a href="https://x.com/NyanZak_"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-bluesky"></i></a>
-                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
                 <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
-                <a href="https://www.linkedin.com/in/zakcronin/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://open.spotify.com/user/jgv8a73doly3kj9xqnp8j9cdx"><i class="fa-brands fa-spotify"></i></a>
+                <a href="https://github.com/NyanZak"><i class="fa-brands fa-github"></i></a>
+
             </div>
         </section>
         <style>
