--- a/about/index.html
+++ b/about/index.html
@@ -67,9 +67,11 @@
                 font-size: 4rem;
                 margin: 0 10px;
             }
-
             .social-icons a[href*="x.com"] i {
-             color: #ffffff; /* White for Twitter */
+             color: #ffffff;
+            }
+            .social-icons a[href*="spotify.com"] i {
+             color: #1ED760;
             }
         </style>
     </main>
