--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,6 @@
         </section>
         <style>
             .social-icons a {
-                color: #1185FE; /* Twitter Blue or any color you prefer */
                 text-decoration: none; /* Removes underline */
             }
             .social-icons i {
@@ -69,6 +68,9 @@
             }
             .social-icons a[href*="x.com"] i {
              color: #ffffff;
+            }
+            .social-icons a[href*="bsky.app"] i {
+             color: #1185FE;
             }
             .social-icons a[href*="spotify.com"] i {
              color: #1ED760;
