updated colours of social icons

--- a/about/index.html
+++ b/about/index.html
@@ -72,6 +72,15 @@
             .social-icons a[href*="bsky.app"] i {
              color: #1185FE;
             }
+            .social-icons a[href*="youtube.com"] i {
+             color: #FF0033;
+            }
+            .social-icons a[href*="twitch.tv"] i {
+             color: #9146FF;
+            }
+            .social-icons a[href*="instagram.com"] i {
+             color: #BC26AA;
+            }
             .social-icons a[href*="spotify.com"] i {
              color: #1ED760;
             }
