--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@
             <h1>About</h1>
             <div class="about-content">
                 <div class="profile-image-container">
-                    <img src="../images/NyanCatCircle.png" alt="Profile Image" class="profile-image">
+                    <img src="../images/NyanCatCircle.png" alt="Profile Image" class="profile-image" style="max-width:100%;height:auto;">
                 </div>
                 <div class="about-text">
                     <h2>Hello!</h2>
