--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NyanZak - Home</title>
     <meta name="description" content="Welcome to NyanZak's portfolio. Explore my projects, learn more about me, and get in touch.">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
