--- a/about/index.html
+++ b/about/index.html
@@ -48,15 +48,16 @@
         <section class="social-media-section" id="social-media">
             <h2>Follow Me</h2>
             <div class="social-icons">
-                <a href="https://x.com/NyanZak_" class="fa-lg"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://bsky.app/profile/nyanzak.com" class="fa-lg"><i class="fa-brands fa-bluesky"></i></a>
-                <a href="https://www.youtube.com/nyanzak" class="fa-lg"><i class="fa-brands fa-youtube"></i></a>
-                <a href="https://www.twitch.tv/nyanzak" class="fa-lg"><i class="fa-brands fa-twitch"></i></a>
-                <a href="https://www.instagram.com/nyanzak/" class="fa-lg"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://open.spotify.com/user/jgv8a73doly3kj9xqnp8j9cdx" class="fa-lg"><i class="fa-brands fa-spotify"></i></a>
-                <a href="https://github.com/NyanZak" class="fa-lg"><i class="fa-brands fa-github"></i></a>
+                <a href="https://x.com/NyanZak_"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://bsky.app/profile/nyanzak.com"><i class="fa-brands fa-bluesky"></i></a>
+                <a href="https://www.youtube.com/nyanzak"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.twitch.tv/nyanzak"><i class="fa-brands fa-twitch"></i></a>
+                <a href="https://www.instagram.com/nyanzak/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://open.spotify.com/user/jgv8a73doly3kj9xqnp8j9cdx"><i class="fa-brands fa-spotify"></i></a>
+                <a href="https://github.com/NyanZak"><i class="fa-brands fa-github"></i></a>
+
             </div>
-        </section>        
+        </section>
         <style>
             .social-icons a {
                 text-decoration: none; /* Removes underline */
