--- a/about/index.html
+++ b/about/index.html
@@ -63,6 +63,7 @@
                 text-decoration: none; /* Removes underline */
             }
             .social-icons i {
+                font-size: 1rem;
                 margin: 0 10px;
             }
             .social-icons a[href*="x.com"] i {
