--- a/about/index.html
+++ b/about/index.html
@@ -40,12 +40,12 @@
                     <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A" frameborder="0" class="form-iframe">Loading...</iframe>
                 </div>
                 <div class="pdf-container">
-                    <object data="https://drive.google.com/uc?export=download&id=YOUR_FILE_ID" 
+                    <object data="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" 
                             type="application/pdf" 
                             style="width: 100%; height: 100%;">
                         <p>
                             Your browser does not support PDFs. 
-                            <a href="https://drive.google.com/file/d/YOUR_FILE_ID/view" target="_blank">Click here to download the PDF</a>.
+                            <a href="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" target="_blank">Click here to download the PDF</a>.
                         </p>
                     </object>
                 </div>                
