--- a/about/index.html
+++ b/about/index.html
@@ -35,20 +35,13 @@
         
         <section class="contact-section" id="contact-section">
             <h2>Contact Me</h2>
-            <div class="embed-wrapper">
-                <div class="google-form">
-                    <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A" frameborder="0" class="form-iframe">Loading...</iframe>
+            <div class="embeds-container">
+                <div class="embed-item">
+                    <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A" width="100%" height="500"></iframe>
                 </div>
-                <div class="pdf-container">
-                    <object data="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" 
-                            type="application/pdf" 
-                            style="width: 100%; height: 100%;">
-                        <p>
-                            Your browser does not support PDFs. 
-                            <a href="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" target="_blank">Click here to download the PDF</a>.
-                        </p>
-                    </object>
-                </div>                
+                <div class="embed-item">
+                    <iframe src="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" width="100%" height="500"></iframe>
+                </div>
             </div>
         </section>
         
