--- a/about/index.html
+++ b/about/index.html
@@ -37,10 +37,10 @@
             <h2>Contact Me</h2>
             <div class="embeds-container">
                 <div class="embed-item">
-                    <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A" width="100%" height="500"></iframe>
+                    <iframe src="https://forms.gle/jm3C1xsjEE2Y6ox2A"></iframe>
                 </div>
                 <div class="embed-item">
-                    <iframe src="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview" width="100%" height="500"></iframe>
+                    <iframe src="https://drive.google.com/file/d/13NqYJxsefmvohvhwJ5wohXNgVmlLcf5W/preview"></iframe>
                 </div>
             </div>
         </section>
