--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
     </header>
     <main class="about-main">
         <section class="about-section">
-            <h1>About</h1>
+            <h1>TEST</h1>
             <div class="about-content">
                 <div class="profile-image-container">
                     <img src="../images/NyanCatCircle.png" alt="Profile Image" class="profile-image">
