--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="NyanZak">
     <title>NyanZak - Home</title>
+    <meta name="keywords" content="NyanZak, portfolio, Website">
     <meta name="description" content="Welcome to NyanZak's portfolio. Explore my projects, learn more about me, and get in touch.">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="css/index.css">
