Changed format of images to Webp

--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <header>
-        <img src="../images/Signature.png" alt="Logo">
+        <picture>
+            <source srcset="../images/Signature.webp" type="image/webp">
+            <img src="../images/Signature.png" alt="Logo">
+        </picture>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -24,7 +27,10 @@
             <h1>About</h1>
             <div class="about-content">
                 <div class="profile-image-container">
-                    <img src="../images/NyanCatCircle.png" alt="Profile Image" class="profile-image">
+                    <picture>
+                        <source srcset="../images/NyanCatCircle.webp" type="image/webp">
+                        <img src="../images/NyanCatCircle.png" alt="Profile Image" class="profile-image">
+                    </picture>
                 </div>
                 <div class="about-text">
                     <h2>Hello!</h2>
@@ -32,6 +38,7 @@
                 </div>
             </div>
         </section>
+        
         
         <section class="contact-section" id="contact-section">
             <h2>Contact Me</h2>
