--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <header>
-        <img src="images/Signature.png" alt="Logo">
+        <picture>
+            <source srcset="../images/Signature.webp" type="image/webp">
+            <img src="../images/Signature.png" alt="Logo">
+        </picture>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
