removed signature, fixed game logos

--- a/projects/index.html
+++ b/projects/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <header>
-        <img src="../images/Signature.png" alt="Logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -23,27 +22,27 @@
         <section class="projects-section">
             <div class="project-gallery">
                 <div class="project-item">
-                    <img src="images/game1.png" alt="Game 1">
+                    <img src="../images/game1.png" alt="Game 1">
                     <button onclick="window.location.href='game1.html'">Pong Recharged - 2023</button>
                 </div>
                 <div class="project-item">
-                    <img src="images/game2.png" alt="Game 2">
+                    <img src="../images/game2.png" alt="Game 2">
                     <button onclick="window.location.href='game2.html'">Katie's Story - 2023</button>
                 </div>
                 <div class="project-item">
-                    <img src="images/game3.png" alt="Game 3">
+                    <img src="../images/game3.png" alt="Game 3">
                     <button onclick="window.location.href='game3.html'">Rush Devour - 2022</button>
                 </div>
                 <div class="project-item">
-                    <img src="images/game4.png" alt="Game 4">
+                    <img src="../images/game4.png" alt="Game 4">
                     <button onclick="window.location.href='game4.html'">Not A Drill - 2022</button>
                 </div>
                 <div class="project-item">
-                    <img src="images/game5.png" alt="Game 5">
+                    <img src="../images/game5.png" alt="Game 5">
                     <button onclick="window.location.href='game5.html'">Within Bastet's Cavern - 2021 </button>
                 </div>
                 <div class="project-item">
-                    <img src="images/game6.png" alt="Game 6">
+                    <img src="../images/game6.png" alt="Game 6">
                     <button onclick="window.location.href='game6.html'">Eggpunk Escape - 2020</button>
                 </div>
             </div>
