--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </nav>        
+               <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="https://nyanzak.github.io/FootballLineupBuilder/" target="_blank" rel="noopener noreferrer">Lineup Builder</a></li>
+        <li><a href="/about">About</a></li>
+              </ul>
+        </nav>      
     </header>
     <main>
         <div class="content-container">
