lineup subpage test

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/projects">Projects</a></li>
         <li><a href="https://nyanzak.github.io/FootballLineupBuilder/" target="_blank" rel="noopener noreferrer">Lineup Builder</a></li>
+        <li><a href="/lineup">Lineup Builder</a></li>
         <li><a href="/about">About</a></li>
               </ul>
         </nav>      
