--- a/about/index.html
+++ b/about/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/projects">Projects</a></li>
+                <li><a href="/lineup">Lineup Builder</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </nav>        
